<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/logged_in"
    android:orientation="vertical"
    android:background="@drawable/loggedin_bg"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout"
        >

        <EditText
            android:id="@+id/search_EditText"
            android:layout_width="300dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Search"
            android:textColor="@color/editText_color"
            android:textColorHint="@color/hint_color"/>

        <Space
            android:layout_width="5sp"
            android:layout_height="5sp"
            android:layout_margin="5sp" />

        <Button
            android:id="@+id/find_barbershop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/find_barbershop_button_text" />

        <Space
            android:layout_width="5sp"
            android:layout_height="5sp"
            android:layout_margin="5sp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/search_EditText"
            android:onClick="onClick"
            android:text="@string/search_button_text" />


        <Space
            android:layout_width="5sp"
            android:layout_height="5sp"
            android:layout_margin="1sp" />

        <Button
            android:id="@+id/capture"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/search_EditText"
            android:onClick="onClick"
            android:text="@string/capture_haircut" />
        <Space
            android:layout_width="5sp"
            android:layout_height="5sp"
            android:layout_margin="1sp" />

        <Button
            android:id="@+id/speech"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/speech"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/search_EditText"
            android:onClick="onClick"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <Space
            android:layout_width="1sp"
            android:layout_height="90sp"
            android:layout_margin="5sp" />

    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/linearLayout"
        android:layout_marginTop="1dp"
        tools:context="edu.bloomu.volan.reticketmaster.LoggedIn" />


</RelativeLayout>

