<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/lightblue"
    android:scaleType="fitXY"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context="edu.bloomu.volan.reticketmaster.MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <Space
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="500dp"
        android:layout_gravity="center"
        android:layout_height="100dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="100sp"
            android:textColor="@color/create_new_account_color"
            android:text="@string/app_name"
            />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/create_new_account_color"
            android:text="Username" />
    <EditText
        style="@style/editText_style"
        android:id="@+id/username"
        android:inputType="textPersonName"
        />


        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/create_new_account_color"
            android:text="Password" />


    <EditText
        style="@style/editText_style"
        android:id="@+id/password"
        android:inputType="textPassword"
       />

        <Button
            android:id="@+id/submit"
            android:layout_centerInParent="true"
            style="@style/button_style"
            android:text="@string/log_in"
            android:onClick="login"/>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/create_new_account_color"
        android:text="@string/create_new_account"
        android:onClick="create_NewAccount"
        android:clickable="true"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="115sp"
            android:layout_margin="115sp" />

    </LinearLayout>
</RelativeLayout>
</ScrollView>